<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/background">

    <TextView
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@string/roboto_light"
        android:text="@string/connect_to_patient_dialog"
        android:textColor="@color/white"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="25sp" />

    <AutoCompleteTextView
        android:id="@+id/patientEmail"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="sans-serif"
        android:hint="@string/find_patient_email"
        android:typeface="serif" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="384dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textSize="18dp"
            android:background="@drawable/layout_rounded_primary"
            android:fontFamily="@string/roboto_light"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.255"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            />

        <Button
            android:id="@+id/searchButton"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="18dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/layout_rounded_primary"
            android:fontFamily="@string/roboto_light"
            android:text="@string/connect_patient_button"
            android:textColor="@color/white"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.759"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>
</LinearLayout>