<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".CreateReminderNameActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="390dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/colorPrimary"
        android:minHeight="60dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <android.support.v7.widget.AppCompatAutoCompleteTextView
        android:id="@+id/patientEmailText"
        android:layout_width="315dp"
        android:layout_height="57dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="88dp"
        android:textSize="20dp"
        android:ems="10"
        android:hint="@string/patient_email"
        android:inputType="textEmailAddress"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/reminderNameText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/reminderNameText"
        android:layout_width="315dp"
        android:layout_height="57dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:textSize="20sp"
        android:ems="10"
        android:hint="@string/reminder_name"
        android:inputType="textPersonName"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="fill_parent"
        android:layout_height="196dp"
        android:layout_marginBottom="120dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/onceRadioButton"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_weight="1"
            android:fontFamily="@string/roboto_light"
            android:text="@string/once_button"
            android:textSize="20sp"
            app:buttonTint="@color/colorPrimary" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/dailyRadioButton"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_weight="1"
            android:fontFamily="@string/roboto_light"
            android:text="@string/daily_button"
            android:textSize="20sp"
            app:buttonTint="@color/colorPrimary" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/weeklyRadioButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:fontFamily="@string/roboto_light"
            android:text="@string/weekly_button"
            android:textSize="20sp"
            app:buttonTint="@color/colorPrimary" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/monthlyRadioButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:fontFamily="@string/roboto_light"
            android:text="@string/monthly_button"
            android:textSize="20sp"
            app:buttonTint="@color/colorPrimary" />

    </RadioGroup>

    <Button
        android:id="@+id/submit_name"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/layout_rounded_primary"
        android:fontFamily="@string/roboto_light"
        android:text="@string/confirmation"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.553" />

</android.support.constraint.ConstraintLayout>